--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ footer {
     padding: 32px 0;
     text-align: center;
     color: #868686;
+    
 
 }
 
@@ -44,5 +45,25 @@ h2 {
 }
 
 .container{
+    margin: 0 auto;
+    padding: 0 20px 0 20px;
+    max-width: 900px   ;
+    
+}
+
+.btn {
+    display: inline-block;
+    color: white;
+    font-weight: 500;
+    font-size: 20px;
+    background: #549da0;
+    border: none;
+    border-radius: 5px;
+    padding: 12px 16px;
+    cursor:pointer;
+}
+
+.btn:hover {
+    background: #468486;
     
 }
