--- a/style.css
+++ b/style.css
@@ -67,3 +67,82 @@ h2 {
     background: #468486;
     
 }
+
+.feature {
+    width: 32%;
+    display: inline-block;
+    font-size: 16px;
+}
+
+.feature img {
+    width: 40%;
+}
+
+blockquote {
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+blockquote p {
+    margin: 0 0 5px 0;
+    font-size: 24px;
+}
+
+blockquote cite {
+    font-size: 16px;
+    font-style: italic;
+}
+
+blockquote cite::before {
+    content: '-';
+    margin-right: 5px;
+}
+
+footer {
+    background: #353535
+    padding 32px 0;
+    text-align: center
+
+    color: #868686;
+    
+    
+    font-size: 12px;
+}
+
+footer ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+footer li {
+    display: inline-block;
+}
+
+footer li a {
+    padding: 6px;
+    font-size: 14px;
+    text-decoration: none;
+    color: #c3c3c3;
+}
+footer li a:hover {
+    color: white;
+}
+
+@media screen and (max-width: 600px) {
+    body {
+      background-color: blue;
+   }
+ }
+
+ @media screen and (min-width: 800px) and (max-width: 1024px) {
+    body {
+      background-color: blue;
+   }
+ }  
+
+ @media screen and  (max-width: 480px) {
+
+ }
+
+ @media screen and (max-width: 480px)
