--- a/style.css
+++ b/style.css
@@ -1,148 +1,131 @@
-header{
+header {
     color: white;
     background-color: #284b63;
-    padding: 80px 0;
     text-align: center;
-
-}
-
-section{
-    padding: 40px;
-    text-align: center;
-}
-.feature {
-    background-color: white;
-    columns: #000;
-
-}
-
-.quote {
+   padding: 80px 0;
+   }
+   
+   section {
+   padding: 40px;
+   text-align: center;
+   }
+   
+   .features {
+   background-color: white; 
+   color: #000;
+   }
+   
+   .quote {
     background-color: #549da0;
     color: white;
-}
-
-footer {
-    background-color: #353535;
-    padding: 32px 0;
-    text-align: center;
-    color: #868686;
-    
-
-}
-
-h1 {
-    font-weight: 300;
-    font-size: 48px;
-    margin: 0 0 16px 0;
-}
-
-h2 {
-    font-weight: 300;
-    padding: 0 20px;
-    max-width: 900px;
-
-
-}
-
-.container{
-    margin: 0 auto;
-    padding: 0 20px 0 20px;
-    max-width: 900px   ;
-    
-}
-
-.btn {
-    display: inline-block;
-    color: white;
-    font-weight: 500;
-    font-size: 20px;
-    background: #549da0;
-    border: none;
-    border-radius: 5px;
-    padding: 12px 16px;
-    cursor:pointer;
-}
-
-.btn:hover {
-    background: #468486;
-    
-}
-
-.feature {
-    width: 32%;
-    display: inline-block;
-    font-size: 16px;
-}
-
-.feature img {
-    width: 40%;
-}
-
-blockquote {
-    margin: 0;
-    padding: 0;
-    text-align: center;
-}
-blockquote p {
-    margin: 0 0 5px 0;
-    font-size: 24px;
-}
-
-blockquote cite {
-    font-size: 16px;
-    font-style: italic;
-}
-
-blockquote cite::before {
-    content: '-';
-    margin-right: 5px;
-}
-
-footer {
-    background: #353535
-    padding 32px 0;
-    text-align: center
-
-    color: #868686;
-    
-    
-    font-size: 12px;
-}
-
-footer ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-footer li {
-    display: inline-block;
-}
-
-footer li a {
-    padding: 6px;
-    font-size: 14px;
-    text-decoration: none;
-    color: #c3c3c3;
-}
-footer li a:hover {
-    color: white;
-}
-
-@media screen and (max-width: 600px) {
-    body {
-      background-color: blue;
    }
- }
-
- @media screen and (min-width: 800px) and (max-width: 1024px) {
-    body {
-      background-color: blue;
+   
+   footer {
+   background-color: #353535;
+   padding: 32px 0;
+   text-align: center;
+   color: #868686;
+   font-size: 12px;
    }
- }  
-
- @media screen and  (max-width: 480px) {
-
- }
-
- @media screen and (max-width: 480px)
+   
+   footer ul {
+       margin: 0;
+       padding: 0;
+       list-style: none;
+   }
+   
+   footer li {
+       display: inline-block;
+   }
+   
+   footer li a {
+       padding: 6px;
+       font-size: 14px;
+       text-decoration: none;
+       color: #c3c3c3;
+   }
+   
+   footer li a:hover {
+       color: white;
+   }
+   
+   h1 {
+       font-size: 48px;
+       margin: 0 0 16px 0;
+   }
+   
+   h2 {
+       font-weight: 300 ;
+       font-size: 24px ;
+       margin: 0 0 16px 0 ;
+   }
+   
+   .container {
+       margin: 0 auto;
+       padding: 0 20px;
+       max-width: 900px;
+   } 
+   
+   .btn {
+       display: inline-block;
+       color: white;
+       font-weight: 500;
+       font-size: 20px;
+       background: #549DA0;
+       border: none;
+       border-radius: 5px;
+       padding: 12px 16px;
+       cursor: pointer;
+   } 
+   
+   .btn:hover {
+       background: #468486;
+   }
+   
+   .feature {
+       width: 32%;
+       display: inline-block;
+       font-size: 16px;
+   }
+   
+   .feature img {
+       width: 40%;
+   }
+   
+   blockquote {
+       margin: 0;
+       padding: 0;
+       text-align: center;
+   }
+   
+   blockquote p {
+       margin: 0 0 5px 0;
+       font-size: 24px;
+   }
+   
+   blockquote cite {
+       font-size: 16px;
+       font-style: italic;
+   }
+   
+   blockquote cite::before {
+       content: '-';
+       margin-right: 5px;
+   }
+   
+   .submenu {
+     left: 50%;
+     transform: translate(-50%, 0);
+     text-align:center;
+     position: absolute;
+     background-color: #549DA0;
+     min-width: 140px;
+     border-radius: 5px;
+     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+     display: block;
+     
+   }
+   .submenu a {
+     color: white;
+     padding: 12px 16px;
+     text-decoration: none;
